Edited wiki page through web user interface.

--- a/wiki/HashCrackingTechniques.wiki
+++ b/wiki/HashCrackingTechniques.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-Here is a non-exhaustive list of hash cracking techniques
+Here is a non-exhaustive list of hash cracking techniques.
 
 
 = Summary =
