Edited wiki page through web user interface.

--- a/wiki/HashingAlgorithms.wiki
+++ b/wiki/HashingAlgorithms.wiki
@@ -9,10 +9,10 @@ If you think I should implement a new one just [http://code.google.com/p/krhash/
 
 
 || *Algorithm* || *Implemented* ||
-||md2||no||
+||md2||yes||
 ||md4||yes||
 ||md5||yes||
-||sha0||no||
+||sha0||yes||
 ||sha1||yes||
 ||lm||yes||
 ||ntlm||no||
